feat: Add feed endpoint to propagate event data to js-ceramic (#255)
* feat: refactor api recon traits along model/interest

* feat: remove recon::Client from API server

Depend on traits tied to storage for data access (also used by recon). Need to verify metrics still work as expected

* feat: add new route to get feed of new events

Route returns a string that can be used to resume finding only newer data

* fix: clean up and document some choices (pr feedback)

* fix: event type with only id/data instead of eventId/eventData

renamed existing type EventDeprecated. It is used by subscribe (deprecated) and as input when creating and event (POST /events).

* fix: clippy whitespace warning

* chore: add augtool info to readme

* fix: re-gen api server

augtool on my pc isn't working right and I botched the manual edit. Switched to mac

---------
