# api-server/api/openapi.yaml
@@ -84,7 +84,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Event'
+                  $ref: '#/components/schemas/EventDeprecated'
                 type: array
           description: success
       summary: Get events for a stream
@@ -160,13 +160,47 @@ paths:
         "204":
           description: success
       summary: Register interest for a sort key
+  /feed/events:
+    get:
+      parameters:
+      - description: "token that designates the point to resume from, that is find\
+          \ keys added after this point"
+        explode: true
+        in: query
+        name: resumeAt
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: "the maximum number of events to return, default is 10000."
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          type: integer
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventFeed'
+          description: success
+        "400":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: bad request
+      summary: Get all new event keys since resume token
 components:
   requestBodies:
     Event:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Event'
+            $ref: '#/components/schemas/EventDeprecated'
       description: Event to add to the node
       required: true
     Message:
@@ -186,7 +220,7 @@ components:
         version:
           description: Version of the Ceramic node
           type: string
-    Event:
+    EventDeprecated:
       description: A Ceramic event as part of a Ceramic Stream
       example:
         eventId: eventId
@@ -201,6 +235,46 @@ components:
       required:
       - eventData
       - eventId
+      title: A Ceramic Event (deprecated. Use Event instead)
+      type: object
+    Event:
+      description: A Ceramic event as part of a Ceramic Stream
+      example:
+        data: data
+        id: id
+      properties:
+        id:
+          description: Multibase encoding of event id bytes.
+          type: string
+        data:
+          description: Multibase encoding of event data.
+          type: string
+      required:
+      - data
+      - id
       title: A Ceramic Event
+      type: object
+    EventFeed:
+      description: Ceramic event keys as part of a Ceramic Stream
+      example:
+        resumeToken: resumeToken
+        events:
+        - data: data
+          id: id
+        - data: data
+          id: id
+      properties:
+        events:
+          description: "An array of events. For now, the value is empty."
+          items:
+            $ref: '#/components/schemas/Event'
+          type: array
+        resumeToken:
+          description: The token/highwater mark to used as resumeAt on a future request
+          type: string
+      required:
+      - events
+      - resumeToken
+      title: Ceramic Event feed data
       type: object
 
