# api-server/examples/server/server.rs
@@ -101,8 +101,9 @@ impl<C> Server<C> {
 
 use ceramic_api_server::server::MakeService;
 use ceramic_api_server::{
-    Api, EventsEventIdGetResponse, EventsPostResponse, InterestsSortKeySortValuePostResponse,
-    LivenessGetResponse, SubscribeSortKeySortValueGetResponse, VersionPostResponse,
+    Api, EventsEventIdGetResponse, EventsPostResponse, FeedEventsGetResponse,
+    InterestsSortKeySortValuePostResponse, LivenessGetResponse,
+    SubscribeSortKeySortValueGetResponse, VersionPostResponse,
 };
 use std::error::Error;
 use swagger::ApiError;
@@ -129,12 +130,28 @@ where
     /// Creates a new event
     async fn events_post(
         &self,
-        event: models::Event,
+        event_deprecated: models::EventDeprecated,
         context: &C,
     ) -> Result<EventsPostResponse, ApiError> {
         info!(
             "events_post({:?}) - X-Span-ID: {:?}",
-            event,
+            event_deprecated,
+            context.get().0.clone()
+        );
+        Err(ApiError("Generic failure".into()))
+    }
+
+    /// Get all new event keys since resume token
+    async fn feed_events_get(
+        &self,
+        resume_at: Option<String>,
+        limit: Option<i32>,
+        context: &C,
+    ) -> Result<FeedEventsGetResponse, ApiError> {
+        info!(
+            "feed_events_get({:?}, {:?}) - X-Span-ID: {:?}",
+            resume_at,
+            limit,
             context.get().0.clone()
         );
         Err(ApiError("Generic failure".into()))
