# api-server/src/lib.rs
@@ -38,6 +38,15 @@ pub enum EventsPostResponse {
 }
 
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
+#[must_use]
+pub enum FeedEventsGetResponse {
+    /// success
+    Success(models::EventFeed),
+    /// bad request
+    BadRequest(String),
+}
+
+#[derive(Debug, PartialEq, Serialize, Deserialize)]
 pub enum InterestsSortKeySortValuePostResponse {
     /// success
     Success,
@@ -52,7 +61,7 @@ pub enum LivenessGetResponse {
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
 pub enum SubscribeSortKeySortValueGetResponse {
     /// success
-    Success(Vec<models::Event>),
+    Success(Vec<models::EventDeprecated>),
 }
 
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
@@ -82,9 +91,17 @@ pub trait Api<C: Send + Sync> {
     /// Creates a new event
     async fn events_post(
         &self,
-        event: models::Event,
+        event_deprecated: models::EventDeprecated,
         context: &C,
     ) -> Result<EventsPostResponse, ApiError>;
+
+    /// Get all new event keys since resume token
+    async fn feed_events_get(
+        &self,
+        resume_at: Option<String>,
+        limit: Option<i32>,
+        context: &C,
+    ) -> Result<FeedEventsGetResponse, ApiError>;
 
     /// Register interest for a sort key
     async fn interests_sort_key_sort_value_post(
@@ -133,7 +150,17 @@ pub trait ApiNoContext<C: Send + Sync> {
     ) -> Result<EventsEventIdGetResponse, ApiError>;
 
     /// Creates a new event
-    async fn events_post(&self, event: models::Event) -> Result<EventsPostResponse, ApiError>;
+    async fn events_post(
+        &self,
+        event_deprecated: models::EventDeprecated,
+    ) -> Result<EventsPostResponse, ApiError>;
+
+    /// Get all new event keys since resume token
+    async fn feed_events_get(
+        &self,
+        resume_at: Option<String>,
+        limit: Option<i32>,
+    ) -> Result<FeedEventsGetResponse, ApiError>;
 
     /// Register interest for a sort key
     async fn interests_sort_key_sort_value_post(
@@ -197,9 +224,22 @@ impl<T: Api<C> + Send + Sync, C: Clone + Send + Sync> ApiNoContext<C> for Contex
     }
 
     /// Creates a new event
-    async fn events_post(&self, event: models::Event) -> Result<EventsPostResponse, ApiError> {
+    async fn events_post(
+        &self,
+        event_deprecated: models::EventDeprecated,
+    ) -> Result<EventsPostResponse, ApiError> {
         let context = self.context().clone();
-        self.api().events_post(event, &context).await
+        self.api().events_post(event_deprecated, &context).await
+    }
+
+    /// Get all new event keys since resume token
+    async fn feed_events_get(
+        &self,
+        resume_at: Option<String>,
+        limit: Option<i32>,
+    ) -> Result<FeedEventsGetResponse, ApiError> {
+        let context = self.context().clone();
+        self.api().feed_events_get(resume_at, limit, &context).await
     }
 
     /// Register interest for a sort key
